--- a/src/components/base.sass
+++ b/src/components/base.sass
@@ -48,6 +48,10 @@ html
     font-weight: 300
     @include tablet-phone 
       font-size: 1em
+  i
+    font-weight: 300
+    font-size: .925em
+    font-style: italic
   body 
     width: 100%
 //overall layout styling
