--- a/src/components/styles/contact.sass
+++ b/src/components/styles/contact.sass
@@ -14,7 +14,7 @@
                 letter-spacing: .3em
                 font-size: 1.5rem
                 padding-bottom: 40px
-                color: $medium-grey
+                color: black
                 font-family: $subfont
                 font-weight: $light
             p
