--- a/src/components/styles/memoir.sass
+++ b/src/components/styles/memoir.sass
@@ -19,6 +19,7 @@
     color: white
     display: flex
     align-items: center
+    padding-top: 35px
     // justify-content: center
     flex-direction: column
     color: $medium-grey
