--- a/src/components/styles/photogallery.sass
+++ b/src/components/styles/photogallery.sass
@@ -3,31 +3,21 @@
 .photogallery
   display: flex
   width: 100%
-  // background: lightskyblue
   &__container
     display: flex
     flex-direction: column
     width: 100%
-    // background: lightgreen
     &__grid 
       display: grid 
       grid-gap: 20px
-      // grid-template-columns: repeat(auto-fill, minmax(500px,1fr)) 
-      // grid-template-rows: repeat(2, 1fr)
-      grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
-      // grid-template-columns: 1fr 1fr
-      // grid-auto-rows: 46px
+      grid-template-columns: repeat(6, 1fr)
       grid-auto-rows: auto
       grid-auto-flow: dense
       // min-height: 35vw
       align-items: start
       // height: auto
       width: 100%
-      @include edgesnap 
-        // grid-template-columns: repeat(auto-fill, minmax(400px,1fr))
-        grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
       @include navsnap 
-        // grid-template-columns: repeat(auto-fill, minmax(100%,1fr))
         grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
       p 
         font-size: 1em
@@ -43,73 +33,54 @@
           width: 100%
           grid-column-start: 1
           grid-column-end: 3  
-      &__item__full 
-        width: 100%
-      &__item__full
-        width: 100%
-        grid-column-start: 1
-        grid-column-end: 3
-
-
-  // &__container
-  //   display: grid 
-  //   grid-gap: 20px
-  //   grid-template-columns: repeat(auto-fill, minmax(254px,1fr))
-  //   grid-auto-rows: 43px
-  //   @include edgesnap 
-  //     width: 100%
-  //   &__item 
-  //     display: flex
-  //     flex-direction: column 
-  //     align-items: center
-  //     justify-content: center 
-  //     overflow: hidden
-  //     margin-right: 10px
-  //     cursor: pointer
-  //     // border-radius: 20px
-  //     width: 245px
-  //     @include edgesnap
-  //       width: auto
-  //     @include phone-large 
-  //       margin-right: 0px
-  //     img
-  //       width: 100%
+        img
+          filter: grayscale(100%)
+        &__full
+          grid-area: span 6 / span 6
+        &__half
+          grid-area: span 3 / span 3
+          @include navsnap 
+            grid-area: span 6 / span 6
+        &.stu
+          grid-area: span 2 / span 2
+          @media(max-width: 850px)
+            grid-area: span 3 / span 3
+          @include navsnap 
+            grid-area: span 6 / span 6
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-      // &__name 
-      //   display: flex 
-      //   align-items: center
-      //   position: absolute
-      //   bottom: 0
-      //   transform: translateY(100%)
-      //   align-self: flex-start 
-      //   width: 100%
-      //   height: 40px
-      //   background: rgba(240,240,240,.7)
-      //   transition: all 0.4s ease
-      //   @include tablet 
-      //     transform: translateY(0)
+  //  &__grid 
+  //     display: flex 
+  //     flex-wrap: wrap
+  //     justify-content: space-between
+  //     // @include edgesnap 
+  //     //   // grid-template-columns: repeat(auto-fill, minmax(400px,1fr))
+  //     //   grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
+  //     // @include navsnap 
+  //     //   // grid-template-columns: repeat(auto-fill, minmax(100%,1fr))
+  //     //   grid-template-columns: repeat(auto-fill, minmax(min-content, max-content))
+  //     p 
+  //       font-size: 1em
+  //       margin-top: 1em
+  //     &__item
+  //       flex-direction: column 
+  //       align-items: center 
+  //       justify-content: center 
+  //       overflow: hidden
+  //       margin-top: 1.5em
+  //       // height: 100%
+  //       // width: 100%
+  //       @include navsnap 
+  //         width: 100%
+  //       img
+  //         filter: grayscale(100%)
+  //       &__full
+  //         width: 100%
+  //       &__half
+  //         width: 50%
+  //       &.stu
+  //         width: 33%
+  //         // grid-column-start: 1
+  //         // grid-column-end: 2
+  //         // grid-area: span 4 / span 4
